render.js added

--- a/PCapture/src/index.html
+++ b/PCapture/src/index.html
@@ -9,7 +9,7 @@
 
   </head>
   <body>
- <video src=""></video>
+ <video></video>
 
  <button id="startBtn" class="button is-primary">Start</button>
  <button id="stopBtn" class="button is-warning">Stop</button>
