--- a/PCapture/src/index.html
+++ b/PCapture/src/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css" />
-    <script defer src="render.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body class="content">
-    <h1>PCapture Screen Recorder</h1>
 
-    <video></video>
+<head>
+  <meta charset="UTF-8" />
+  <title>PCapture</title>
+  <link rel="stylesheet" href="index.css" />
+  <script defer src="render.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css" />
+  <link rel="stylesheet" href="index.css" />
+</head>
 
-    <button id="startBtn" class="button is-primary">Start</button>
-    <button id="stopBtn" class="button is-warning">Stop</button>
+<body class="content">
+  <h1>PCapture Screen Recorder 🖥🎥</h1>
 
-    <hr />
+  <video></video>
 
-    <button id="videoSelectBtn" class="button is-text">
-      Choose a video source
-    </button>
-  </body>
+  <button id="startBtn" class="button is-primary">Start</button>
+  <button id="stopBtn" class="button is-warning">Stop</button>
+
+  <hr />
+
+  <button id="videoSelectBtn" class="button is-text">
+    Choose a video source
+  </button>
+</body>
+
 </html>
